fix wrap on header buttons

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -30,7 +30,7 @@ justify-content: space-around;
 .buttons {
   width: 100vw;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-around;
   }
 
